--- a/index.html
+++ b/index.html
@@ -64,5 +64,32 @@
                 </div>
         </section>
   </header>
+
+  <main class="bg-[#f0fdf4]">
+    <section id="about" class="py-25 bg-[#f0fdf4]">
+      <h2 class="text-3xl font-medium text-center mb-10">
+        About the Campaign
+      </h2>
+      <div class="w-10/12 mx-auto flex-col md:flex-row flex items-center justify-center gap-7">
+        <div class="">
+          <img src="./assets/about.png" alt="" />
+        </div>
+        <div class="max-w-[530px]">
+          <p class="mb-5">
+            Green Earth is a global tree plantation initiative dedicated to
+            fighting climate change. Since our start, we’ve planted over
+            500,000 trees worldwide. By joining our campaign, you help restore
+            forests, create habitats for wildlife, and combat global warming.
+          </p>
+          <ul class="list-disc list-inside">
+            <li>Restoration of natural habitats</li>
+            <li>Improvement of air quality</li>
+            <li>Support for local communities</li>
+          </ul>
+        </div>
+      </div>
+    </section>
+
+  </main>
 </body>
 </html>
