--- a/index.html
+++ b/index.html
@@ -90,6 +90,25 @@
       </div>
     </section>
 
+    <section class="bg-[#cff0dc] py-25">
+      <h2 class="text-3xl font-medium text-center mb-10">Our Impact</h2>
+      <div class="grid grid-cols-1 md:grid-cols-3 gap-13 text-center w-10/12 mx-auto">
+        <div class="bg-white rounded-xl p-10 hover:-translate-y-3 shadow-sm hover:shadow-lg ">
+          <h4 class="text-[#15803d] font-bold text-3xl mb-3">500k+</h4>
+          <p>Trees Planted</p>
+        </div>
+
+        <div class="bg-white rounded-xl p-10 hover:-translate-y-3 shadow-sm hover:shadow-lg">
+          <h4 class="text-[#15803d] font-bold text-3xl mb-3">120+</h4>
+          <p>Communities Involved</p>
+        </div>
+
+        <div class="bg-white rounded-xl p-10 hover:-translate-y-3 shadow-sm hover:shadow-lg">
+          <h4 class="text-[#15803d] font-bold text-3xl mb-3">30+</h4>
+          <p>Countries Reached</p>
+        </div>
+      </div>
+    </section>
   </main>
 </body>
 </html>
