--- a/index.html
+++ b/index.html
@@ -109,6 +109,25 @@
         </div>
       </div>
     </section>
+
+    <section id="tree" class="py-25 bg-[#166534]">
+      <h2 class="font-medium text-center text-white text-3xl mb-10">
+        Plant a Tree Today
+      </h2>
+      <form class="p-8 md:p-10 rounded-xl mx-5 md:mx-auto max-w-[650px] space-y-3 bg-[#15803d]">
+        <input type="text" placeholder="Your Name" class="input w-full"/>
+        <input type="text" placeholder="Your Email Address" class="input w-full"/>
+        <select class="select w-full">
+          <option disabled selected>Number of Trees</option>
+          <option>1 Tree - $5</option>
+          <option>5 Tree - $25</option>
+          <option>10 Tree - $50</option>
+        </select>
+        <button class="btn rounded-full bg-[#FACC15] border-[#FACC15] text-[#15803D] w-full">
+          Donate Now
+        </button>
+      </form>
+    </section>
   </main>
 </body>
 </html>
