Real Footer part (Right Reserved)

--- a/index.html
+++ b/index.html
@@ -129,5 +129,10 @@
       </form>
     </section>
   </main>
+    <footer class="bg-[#14532d]">
+    <p class="text-center text-white py-6">
+      © 2025 Green Earth. All Rights Reserved.
+    </p>
+  </footer>
 </body>
 </html>
