--- a/index.html
+++ b/index.html
@@ -134,5 +134,6 @@
       © 2025 Green Earth. All Rights Reserved.
     </p>
   </footer>
+    <script src="./javaScript.js"></script>
 </body>
 </html>
